[package]
name = "tk-package-version"
version = "0.1.0"
edition = "2021"
authors = ["Thinkube Team"]
description = "MCP server for checking package versions across multiple registries"
license = "Apache-2.0"

[dependencies]
# MCP SDK
rmcp = { version = "0.6.3", features = ["server", "macros", "transport-streamable-http-server", "schemars"] }
rmcp-macros = "0.6.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Web framework for health endpoint
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# HTTP client and utilities
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
url = "2.5"

# JSON and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"

# Version parsing
semver = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async trait
async-trait = "0.1"

# Environment variables
dotenvy = "0.15"

# Command line parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Cache for version checks
moka = { version = "0.12", features = ["future"] }

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# File and process handling
tempfile = "3.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handler
